Arreglos de sonarQube e historial de chat